--- a/recipe1.html
+++ b/recipe1.html
@@ -262,7 +262,7 @@
     <div class="recipe-container">
         <div class="recipe-header">
             <h1 class="recipe-title">Perfect Roasted Beef</h1>
-            <img src="./beef1.jpg" alt="Roasted Beef" class="recipe-image">
+            <img src="beef1.jpg" alt="Roasted Beef" class="recipe-image">
         </div>
         
         <div class="recipe-content">
