--- a/recipe2.html
+++ b/recipe2.html
@@ -270,7 +270,7 @@
     <div class="recipe-container">
         <div class="recipe-header">
             <h1 class="recipe-title">Authentic Pilau</h1>
-            <img src="./BeefPilau.jpg" alt="Pilau" class="recipe-image">
+            <img src="BeefPilau.jpg" alt="Pilau" class="recipe-image">
         </div>
         
         <div class="recipe-content">
