--- a/menu.html
+++ b/menu.html
@@ -258,7 +258,7 @@
 
     <div class="dish-container">
         <div class="dish-card">
-            <img src="./beef.jpg" alt="Roasted Beef" class="dish-image">
+            <img src="beef.jpg" alt="Roasted Beef" class="dish-image">
             <div class="dish-info">
                 <h3 class="dish-name">Roasted Beef</h3>
                 <div class="dish-specs">
@@ -274,7 +274,7 @@
         </div>
 
         <div class="dish-card">
-            <img src="./BeefPilau.jpg" alt="Pilau" class="dish-image">
+            <img src="BeefPilau.jpg" alt="Pilau" class="dish-image">
             <div class="dish-info">
                 <h3 class="dish-name">Pilau</h3>
                 <div class="dish-specs">
