--- a/about.html
+++ b/about.html
@@ -190,12 +190,6 @@
             color: #c8a2c8;
         }
 
-        /* Animations (you'll need to define these in animations.css) */
-        /* Examples:
-        .swing-in-top-fwd { ... }
-        .scale-in-center { ... }
-        */
-
     </style>
 </head>
 <body>
@@ -217,7 +211,7 @@
     <section id="about" class="about-section">
         <div class="about-container">
             <div class="about-image swing-in-top-fwd">
-                <img src="./profile.jpg" alt="Victor Nyairabu">
+                <img src="profile.jpg" alt="Victor Nyairabu">
                 <div class="image-border"></div>
             </div>
             <div class="about-content">
